# authentication-service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum
.github/workflows/: deploy-cascade.yml  test.yml
cmd/authservice/: README.md  main.go
cmd/server/: config.go  main.go
docs/: architecture.md  auth-error-contract.md  auth-provider-gap-matrix.md  auth-session-contract.md  competitor-analysis.md  compliance-readiness.md  deployment-values.md  email-transport.md  enterprise-auth-provider-roadmap.md  enterprise-strengthening-goals.md  multi-region-deployment.md  operations-runbook.md  passkey-qa.md  vps-setup-guide.md
docs/security/: known-issues.md
internal/application/: adaptive_security_service.go  admin_service.go  audit_service.go  audit_stream.go  auth_service.go  auth_tokens_test.go  bot_protection.go  bot_protection_test.go  client_email_config_service.go  client_service.go  email_url_builder.go  email_validation_test.go  email_verify_service.go  m2m_service.go  ports.go  (+18 more)
public/: 2fa.html  account.html  auth-ui.css  auth-ui.js  authservice.js  docs.html  forgot-password.html  login.html  portal.html  reset-password.html  signup.html  verify-email.html
scripts/: backup-postgres.sh  export-audit.sh  restore-postgres.sh
sdks/: README.md  framework-support.md
sdks/python/: README.md  pyproject.toml
sdks/python/authservice/: __init__.py  client.py  jwt.py  middleware.py
sdks/rust/: Cargo.toml  README.md
sdks/rust/src/: actix.rs  axum.rs  jwt.rs  lib.rs
terraform-provider-authservice/: README.md  go.mod  main.go
(+166 files in other folders)
