[package]
name = "authservice"
version = "0.1.0"
edition = "2021"
description = "Generated Rust SDK and Axum/Actix middleware for AuthService"
license = "MIT"

[dependencies]
anyhow = "1"
async-trait = "0.1"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
axum = { version = "0.7", optional = true }
actix-web = { version = "4", optional = true }

[features]
default = []
axum = ["dep:axum"]
actix = ["dep:actix-web"]
